adding in the second nav bar and styling ready for the on hover card section. second nav bar is on bottom

--- a/npr-remake/npr.html
+++ b/npr-remake/npr.html
@@ -25,16 +25,17 @@
                 <li class="donate-card"><a class="donate-link" href="#"><span class="donate-text">DONATE</span></a></li>
 
             </ul>
-
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-
         </div>
+        <div class="nav-bottom-level">
+            <ul>
+                <li><a class="news-hover" href="#">NEWS</a></li>
+                <li><a class="culture-hover" href="#">CULTURE</a></li>
+                <li><a class="music-hover" href="#">MUSIC</a></li>
+                <li><a class="podcast-hover" href="#">PODCASTS & SHOWS</a></li>
+                <li><a class="search-hover" href="#">SEARCH</a></li>
+            </ul>
+        </div>
+
         <section></section>
     </nav>
 
