Starting adding dropdowns - attempted to get my head around grid, will have a look later

--- a/npr-remake/npr.html
+++ b/npr-remake/npr.html
@@ -28,7 +28,18 @@
         </div>
         <div class="nav-bottom-level">
             <ul>
-                <li><a class="news-hover" href="#">NEWS</a></li>
+                <li class="news-card"><a class="news-hover" href="#">NEWS</a>
+                    <ul class="news-submenu">
+                        <li>National</li>
+                        <li>World</li>
+                        <li>Politics</li>
+                        <li>Business</li>
+                        <li>Health</li>
+                        <li>Science</li>
+                        <li>Climate</li>
+                        <li>Race</li>
+                    </ul>
+                </li>
                 <li><a class="culture-hover" href="#">CULTURE</a></li>
                 <li><a class="music-hover" href="#">MUSIC</a></li>
                 <li><a class="podcast-hover" href="#">PODCASTS & SHOWS</a></li>
