Wracking my brain over grid, will attempt flexbox nexttime

--- a/npr-remake/npr.html
+++ b/npr-remake/npr.html
@@ -14,21 +14,22 @@
     <nav>
         <div class="nav-top-level">
             <ul>
-                <li>
+                <li class="top">
                     <img src="npr-logo.svg" alt="NPR logo">
                 </li>
 
-                <li class="sign-in-card"><a class="sign-in-link" href="#">SIGN IN</a></li>
+                <li class="sign-in-card top"><a class="sign-in-link" href="#">SIGN IN</a></li>
 
-                <li><a class="shop-link" href="#">NPR SHOP</a></li>
+                <li class="top"><a class="shop-link" href="#">NPR SHOP</a></li>
 
-                <li class="donate-card"><a class="donate-link" href="#"><span class="donate-text">DONATE</span></a></li>
+                <li class="donate-card top"><a class="donate-link" href="#"><span class="donate-text">DONATE</span></a>
+                </li>
 
             </ul>
         </div>
         <div class="nav-bottom-level">
             <ul>
-                <li class="news-card"><a class="news-hover" href="#">NEWS</a>
+                <li class="news-card top"><a class="news-hover" href="#">NEWS</a>
                     <ul class="news-submenu">
                         <li>National</li>
                         <li>World</li>
@@ -40,10 +41,10 @@
                         <li>Race</li>
                     </ul>
                 </li>
-                <li><a class="culture-hover" href="#">CULTURE</a></li>
-                <li><a class="music-hover" href="#">MUSIC</a></li>
-                <li><a class="podcast-hover" href="#">PODCASTS & SHOWS</a></li>
-                <li><a class="search-hover" href="#">SEARCH</a></li>
+                <li class="top"><a class="culture-hover" href="#">CULTURE</a></li>
+                <li class="top"><a class="music-hover" href="#">MUSIC</a></li>
+                <li class="top"><a class="podcast-hover" href="#">PODCASTS & SHOWS</a></li>
+                <li class="top"><a class="search-hover" href="#">SEARCH</a></li>
             </ul>
         </div>
 
