Ficing the grid and adding it for the other hovers, News hover 100% done just sizing on others and podcasts needs complete implementation - Just the play card to go - Nearly there!

--- a/npr-remake/npr.html
+++ b/npr-remake/npr.html
@@ -29,21 +29,42 @@
         </div>
         <div class="nav-bottom-level">
             <ul>
-                <li class="news-card top"><a class="news-hover" href="#">NEWS</a>
-                    <ul class="news-submenu">
-                        <li>National</li>
-                        <li>World</li>
-                        <li>Politics</li>
-                        <li>Business</li>
-                        <li>Health</li>
-                        <li>Science</li>
-                        <li>Climate</li>
-                        <li>Race</li>
+                <li class="news-card top"><a class="news-hover hover" href="#">NEWS</a>
+                    <ul class="news-submenu submenu">
+                        <li> <a href=""> National</a></li>
+                        <li><a href="">World</a></li>
+                        <li><a href="">Politics</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Health</a></li>
+                        <li><a href="">Science</a></li>
+                        <li><a href="">Climate</a></li>
+                        <li><a href="">Race</a></li>
                     </ul>
                 </li>
-                <li class="top"><a class="culture-hover" href="#">CULTURE</a></li>
-                <li class="top"><a class="music-hover" href="#">MUSIC</a></li>
-                <li class="top"><a class="podcast-hover" href="#">PODCASTS & SHOWS</a></li>
+                <li class="top"><a class="culture-hover hover" href="#">CULTURE</a>
+                    <ul class="culture-submenu submenu">
+                        <li><a href="">Books</a></li>
+                        <li><a href="">Movies</a></li>
+                        <li><a href="">Television</a></li>
+                        <li><a href="">Pop Culture</a></li>
+                        <li><a href="">Food</a></li>
+                        <li><a href="">Art & Design</a></li>
+                        <li><a href="">Performing Arts</a></li>
+                        <li><a href="">Life Kit</a></li>
+                    </ul>
+                </li>
+                <li class="top"><a class="music-hover hover" href="#">MUSIC</a>
+                    <ul class="music-submenu submenu">
+                        <li><a href="">Tiny Desk</a></li>
+                        <li><a href="">#NowPlaying</a></li>
+                        <li><a href="">All Songs Considered</a></li>
+                        <li><a href="">Music Features</a></li>
+                        <li><a href="">Live Sessions</a></li>
+                    </ul>
+                </li>
+                <li class="top"><a class="podcast-hover" href="#">PODCASTS & SHOWS</a>
+
+                </li>
                 <li class="top"><a class="search-hover" href="#">SEARCH</a></li>
             </ul>
         </div>
