added the play card - needs stylying, final tweaks just needed on all including on hover for everything but news

--- a/npr-remake/npr.html
+++ b/npr-remake/npr.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+
+    <section>
+        <div class="inside-player"><button class="player-button">
+                GIANT PLAY BUTTON
+            </button></div>
+        <ul class="player-nav">
+            <li>HOURLY NEWS</li>
+            <li>LISTEN LIVE</li>
+            <li>PLAYLIST</li>
+        </ul>
+    </section>
+
     <nav>
         <div class="nav-top-level">
             <ul>
