finishing off the general structure of the play card, needs final polishing for everything

--- a/npr-remake/npr.html
+++ b/npr-remake/npr.html
@@ -13,13 +13,18 @@
 <body>
 
     <section>
-        <div class="inside-player"><button class="player-button">
-                GIANT PLAY BUTTON
-            </button></div>
-        <ul class="player-nav">
-            <li>HOURLY NEWS</li>
-            <li>LISTEN LIVE</li>
-            <li>PLAYLIST</li>
+        <div class="inside-player">
+            <button class="player-txt player-button">
+                <div class="inside-button">
+                    <span class="player-txt stream-tag">NPR 24Hour Program Stream</span>
+                    <span class="player-txt stream-text">On Air Now</span>
+                </div>
+            </button>
+        </div>
+        <ul class="player-txt player-nav">
+            <li class="player-txt"> <button> HOURLY NEWS</button></li>
+            <li class="player-txt"> <button> LISTEN LIVE</button></li>
+            <li class="player-txt"> <button> PLAYLIST</button></li>
         </ul>
     </section>
 
